feat: added code to index to allow viewing of pdf

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,10 +15,15 @@
       <ul>
         <% files.map(file => { %>
           <li>
-            <a href="<%= file.url %>"><%= file.name %></a>
+            <a href="<%= file.name %>"><%= file.name %></a>
           </li>
         <% }) %>
       </ul>
     </header>
+    <section>
+        <% if((typeof(file) !== 'undefined')) { %>
+            <embed src="<%= file.url %>" width="500" height="646">
+        <% } %>
+    </section>
   </body>
 </html>
