--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
   <head>
     <title>PDF Express</title>
     <style>
-      body { margin: 30px; background: Aquamarine; font: 30px/1.5 "Futura"; display: flex; }
+      body { margin: 30px; font: 30px/1.5 "Futura"; display: flex; }
       header { margin-right: 80px; }
       ul { list-style: none; padding-left: 0; }
     </style>
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>
-        <img src="/img/logo.svg" width="200">
+        <img src="/imgs/logo.svg" width="200">
       </h1>
       <ul>
         <% files.map(file => { %>
